# switchboard_oracle

./: Anchor.toml  package.json
keypairs/: keypair.json  oracles.json
programs/vrf-client/: Cargo.toml
programs/vrf-client/src/: lib.rs
programs/vrf-client/src/actions/: init_client.rs
tests/: vrf-client.ts
