[package]
name = "vrf-client"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_client"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
mpl-token-metadata = { version = "1.13.0",  features = ["no-entrypoint"] }
toml_datetime="=0.6.1"
winnow="=0.4.1"
solana-program = "=1.14.18"
switchboard-v2 = { version = "^0.1.14", features = ["devnet"] }
bytemuck = "1.7.2"

